cabal-version:      3.4
name:               tx-tools
version:            0.1.0.0
-- synopsis:
-- description:
license:            Apache-2.0
license-file:       LICENSE
author:             Sasha Bogicevic
maintainer:         sasha.bogicevic@pm.me
-- copyright:
category:           blockchain
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  TxTools 
    -- other-modules:
    -- other-extensions:
    build-depends:    base >= 4.14 && < 4.17
                    , cardano-api

    hs-source-dirs:   src
    default-language: Haskell2010 

test-suite tx-tools-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base >= 4.14 && < 4.17 
      , tx-tools
